# advent-of-code-2024

./: .gitignore  README.md
day1/: CMakeLists.txt
day1/src/: main_part1.c  main_part2.c
day2/: CMakeLists.txt
day2/src/: main_part1.c  main_part2.c
day3/: CMakeLists.txt
day3/src/: main_part1.cpp  main_part2.cpp
day4/: CMakeLists.txt
day4/src/: main_part1.c  main_part2.c
day5/: CMakeLists.txt
day5/src/: main_part1.c  main_part2.c
day6/: CMakeLists.txt
day6/src/: main_part1.c  main_part2.c
day7/: CMakeLists.txt
day7/src/: main_part1.c  main_part2.c
day8/: CMakeLists.txt
day8/src/: main_part1.c  main_part2.c
